# tdcr_control

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
reference_outputs/: cc.html  cc_backbone.csv  cc_tip_pose.csv  ccsub.html  ccsub_backbone.csv  ccsub_tip_pose.csv  prbm.html  prbm_backbone.csv  prbm_tip_pose.csv  vc.html  vc_backbone.csv  vc_tip_pose.csv  vcref.html  vcref_backbone.csv  vcref_tip_pose.csv
tdcr_benchmark/: __init__.py  animate.py  cli.py  config.py  math_utils.py  output.py  runner.py
tdcr_benchmark/models/: __init__.py  base.py  constant_curvature.py  cosserat_rod.py  piecewise_constant_curvature.py  pseudo_rigid_body.py  subsegment_cosserat_rod.py  vc_common.py
tests/: test_animate.py  test_cli.py  test_config.py  test_constant_curvature.py  test_math_utils.py  test_piecewise_constant_curvature.py  test_reference_outputs.py  test_remaining_models.py
